<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity"
    android:orientation="vertical" >
    <GridLayout
        	android:id="@+id/fragment_container"
        	android:layout_weight="3"
        	android:layout_width="match_parent"
        	android:layout_height="0dp" />

    <GridLayout
        android:id="@+id/button_layout"
        android:name="com.adriane.oblig2.ButtonGridLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:columnCount="2" >

        <Button
            android:id="@+id/button_other_activity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal|top"
            android:text="@string/other_activity" />

        <Button
            android:id="@+id/button_vibrate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="0"
            android:layout_row="1"
            android:layout_gravity="center_horizontal|top"
            android:text="@string/vibrate" />
        
        <Button
            android:id="@+id/button_notification"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="0"
            android:layout_row="2"
            android:layout_gravity="center_horizontal|top"
            android:text="@string/notification" />

        <Button
            android:id="@+id/button_insert_frag"
            android:layout_column="1"
            android:layout_row="0"
            android:layout_gravity="center_horizontal|top"
            android:text="@string/insert_frag" />

        <Button
            android:id="@+id/button_next_frag"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="1"
            android:layout_gravity="center_horizontal|top"
            android:layout_row="1"
            android:enabled="false"
            android:text="@string/next_fragment" />
        
        <Button
            android:id="@+id/button_toast"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="1"
            android:layout_gravity="center_horizontal|top"
            android:layout_row="2"
            android:text="@string/toast" />
        
        <Button
            android:id="@+id/button_camera"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="0"
            android:layout_row="3"
            android:layout_gravity="center_horizontal|top"
            android:text="@string/camera" />

    </GridLayout>

</LinearLayout>
